--- a/test/fixtures/flights.yml
+++ b/test/fixtures/flights.yml
@@ -2,12 +2,12 @@
 
 one:
   departure: USA
-  departure_time: 2019-08-02 09:04:49
+  departure_date: 2019-08-02
   arrival: CAN
   duration: 4
 
 two:
   departure: CAN
-  departure_time: 2019-08-02 20:08:49
+  departure_date: 2019-08-02
   arrival: USA
   duration: 4
