--- a/test/fixtures/flights.yml
+++ b/test/fixtures/flights.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  departure: USA
+  departure: DET
   departure_date: 2019-08-02
   arrival: CAN
   duration: 4
@@ -9,5 +9,5 @@ one:
 two:
   departure: CAN
   departure_date: 2019-08-02
-  arrival: USA
+  arrival: DET
   duration: 4
